Added basics for Republic of West Australia (WIP)

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1,4 +1,23 @@
 ﻿l_english:
+ WAR_fascism:0 "West Australian Empire"
+ WAR_fascism_DEF:0 "the West Australian Empire"
+ WAR_democratic:0 "Republic of West Australia"
+ WAR_democratic_DEF:0 "the Republic of West Australia"
+ WAR_neutrality:0 "Independant West Australia"
+ WAR_neutrality_DEF:0 "Independant West Australia"
+ WAR_communism:0 "West Australian People's Republic"
+ WAR_communism_DEF:0 "the West Australian People's Republic"
+ WAR_fascism_ADJ:0 "Westralist"
+ WAR_democratic_ADJ:0 "West Australian"
+ WAR_neutrality_ADJ:0 "West Australian"
+ WAR_communism_ADJ:0 "West Australian"
+ WAR:0 "West Australia"
+ WAR_DEF:0 "West Australia"
+ WAR_ADJ:0 "West Australian"
+ WAR_autonomy_dominion:0 "West Australia"
+ WAR_autonomy_dominion_DEF:0 "the Dominion of West Australia"
+ WAR_subject:0 "$OVERLORDADJ$ $WAR$"
+ WAR_subject_DEF:0 "$OVERLORDADJ$ $WAR$"
  NUS_fascism:0 "Confederate States of America"
  NUS_fascism_DEF:0 "the Confederate States of America"
  NUS_democratic:0 "New United States of America"
